--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ h2 {
   width: 150px;
   height: 150px;
   border-radius: 50%;
+  border: 3px solid #61dafb;
   display: block;
   margin: 1rem auto;
 }
